--- a/.github/workflows/cla-check.yml
+++ b/.github/workflows/cla-check.yml
@@ -5,8 +5,8 @@ on:
     branches: [master, default]
 
 jobs:
-  cla-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check if CLA signed
-        uses: canonical/has-signed-canonical-cla@v1
+  # cla-check:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check if CLA signed
+  #       uses: canonical/has-signed-canonical-cla@v1
